--- a/Klinik.Web/Views/Pharmacy/Prescription.cshtml
+++ b/Klinik.Web/Views/Pharmacy/Prescription.cshtml
@@ -10,7 +10,7 @@
 			<a href="#" class="fa fa-caret-down"></a>
 		</div>
 		<h5 class="panel-title">
-			@Klinik.Resources.UIMessages.Prescription
+			Prescription Validation
 		</h5>
 	</header>
 
@@ -19,11 +19,15 @@
 			<table id="tbPrescription" class="table table-striped table-bordered dt-responsive" cellspacing="0">
 				<thead>
 					<tr>
-						<th>@Klinik.Resources.UIMessages.Number</th>
+						<th style="width:20px;">NO</th>
 						<th>@Klinik.Resources.UIMessages.MedicineName</th>
 						<th>@Klinik.Resources.UIMessages.Dose</th>
-						<th>@Klinik.Resources.UIMessages.Amount</th>
+						<th style="width:30px;">@Klinik.Resources.UIMessages.Amount</th>
 						<th>@Klinik.Resources.UIMessages.RemarkUse</th>
+						<th>@Klinik.Resources.UIMessages.MedicineName</th>
+						<th>@Klinik.Resources.UIMessages.Amount</th>
+						<th>Note</th>
+						<th>@Klinik.Resources.UIMessages.Process</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -37,6 +41,10 @@
 								<td>@item.Dose</td>
 								<td>@item.Qty</td>
 								<td>@item.RemarkUse</td>
+								<td><input type="text"/></td>
+								<td><input type="text"/></td>
+								<td><input type="text"/></td>
+								<td><button>Confirm</button></td>
 							</tr>
 						}
 					}
