--- a/Klinik.Web/Views/DeliveryOrder/DeliveryOrderList.cshtml
+++ b/Klinik.Web/Views/DeliveryOrder/DeliveryOrderList.cshtml
@@ -10,7 +10,7 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.GudangList
+            @Klinik.Resources.UIMessages.DeliveryOrderList
             <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
