--- a/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
@@ -24,33 +24,33 @@
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
                 <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.podate, new { @class = "form-control", @id = "dodate" })
+                    @Html.TextBoxFor(x => x.podate, new { @class = "form-control", @id = "podate" })
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.TujuanDO</label>
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.RequestBy</label>
                 <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.request_by, new { @class = "form-control", @id = "dodest" })
+                    @Html.TextBoxFor(x => x.request_by, new { @class = "form-control", @id = "request_by" })
                 </div>
             </div>
             <br />
         </form>
     </div>
     <div class="panel-body">
-        <table id="tblDeliveryOrder" class="table color-table success-table">
+        <table id="tblPurchaseOrder" class="table color-table success-table">
             <thead>
                 <tr>
                     <th hidden>Id Obat</th>
                     <th>Nama Obat</th>
-                    <th>Nama Gudang</th>
-                    <th>Nama Klinik</th>
-                    <th>Nama Brang PO</th>
-                    <th>Qty PO</th>
-                    <th>Qty PO Final</th>
-                    <th>Qty DO</th>
-                    <th>Remark DO</th>
-                    <th>Qty Adj</th>
-                    <th>Remark Adj</th>
+                    <th>Total Pemakaian</th>
+                    <th>Sisa Stock</th>
+                    <th>Qty</th>
+                    <th>Qty add</th>
+                    <th>Reason add</th>
+                    <th>Total</th>
+                    <th>Nama By HO</th>
+                    <th>Qty By HP</th>
+                    <th>Remark By HO</th>
                     <th>Action</th>
                 </tr>
             </thead>
@@ -59,67 +59,59 @@
                 {
                     foreach (var item in Model.purchaseOrderdetailModels)
                     {
-                        <tr>
-                            <td hidden></td>
-                            <td hidden></td>
-                            <td hidden></td>
-                            <td hidden></td>
-                            <td hidden></td>
-                            <td><select disabled="disabled"><option></option></select></td>
-                            <td><select disabled="disabled"><option></option></select></td>
-                            <td><select disabled="disabled"><option></option></select></td>
-                            <td><select disabled="disabled"><option></option></select></td>
-                            <td><input type="text" class="form-control" value="" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="" disabled="disabled" /></td>
-                            <td hidden></td>
-                            <td>
-                                <button class="edit-deliveryorderdetail">Edit</button>
-                                <button>Delete</button>
-                            </td>
-                        </tr>
+                <tr>
+                    <td hidden>@item.Id</td>
+                    <td hidden>@item.ProductId</td>
+                    <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
+                    <td><input type="text" class="form-control" value="@item.tot_pemakaian" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.sisa_stok" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.qty" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.total" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.nama_by_ho" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.qty_by_ho" disabled="disabled" /></td>
+                    <td><input type="text" class="form-control" value="@item.remark_by_ho" disabled="disabled" /></td>
+                    <td>
+                        <button class="edit-purchaseorderdetail">Edit</button>
+                        <button>Delete</button>
+                    </td>
+                </tr>
                     }
                 }
             </tbody>
         </table>
         <br />
-        <form id="deliveryorderdetail">
+        <form id="purchaseorderdetail">
             <div class="form-group">
-                <input type="text" hidden id="DeliveryOrderDetailId" />
+                <input type="text" hidden id="PurchaseOrderDetailId" />
                 <select id="namabarang" class="form-control" style="width:230px"></select>
                 <input type="text" hidden id="ProductId" />
-                <select id="namagudang" class="form-control" style="width:230px"></select>
-                <input type="text" hidden id="GudangId" />
-                <select id="namaklinik" class="form-control" style="width:230px"></select>
-                <input type="text" hidden id="ClinicId" />
-                <select id="namabarang_po" class="form-control" style="width:230px"></select>
-                <input type="text" hidden id="ProductId_Po" />
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Qty PO" id="qty_po" value="" />
-                <input type="text" class="form-control" placeholder="QTY PO Final" id="qty_po_final" value="" />
-                <input type="text" class="form-control" placeholder="Qty DO" id="qty_do" value="" />
-                <input type="text" class="form-control" placeholder="Qty Adj" id="qty_adj" value="" />
+                <input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="" />
+                <input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" />
+                <input type="text" class="form-control" placeholder="qty" id="qty" value="" />
+                <input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" />
+                <input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" />
+                <input type="text" class="form-control" placeholder="total" id="total" value="" />
+                <input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" />
+                <input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" />
             </div>
             <div class="form-group">
-                <textarea type="text" class="namaobat form-control" placeholder="Remark DO" id="remark_do"></textarea>
-                <br />
-                <textarea type="text" class="namaobat form-control" placeholder="Remark Adj" id="remark_adj"></textarea>
+                <textarea type="text" class="namaobat form-control" placeholder="remark_by_ho" id="remark_by_ho"></textarea>
             </div>
             <input type="button" id="btnAdd" value="Add" />
         </form>
         <footer class="panel-footer">
-            <button type="submit" class="btn btn-primary saveorderdetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseOrder/CreateOrEditPurchaseOrder">@Klinik.Resources.UIMessages.Save</button>
+            <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseOrder/CreateOrEditPurchaseOrder">@Klinik.Resources.UIMessages.Save</button>
             <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
         </footer>
     </div>
 </section>
 
 @section Scripts {
-    <script src="~/js/Custom.js"></script>
+    <script src="~/js/PurchaseOrder.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
 
