--- a/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
@@ -10,7 +10,7 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.DeliveryOrderList
+            @Klinik.Resources.UIMessages.PurchaseOrderList
             <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
