--- a/Klinik.Web/Views/DeliveryOrderPusat/CreateOrEditDeliveryOrderPusat.cshtml
+++ b/Klinik.Web/Views/DeliveryOrderPusat/CreateOrEditDeliveryOrderPusat.cshtml
@@ -4,6 +4,7 @@
 }
 @section Styles{
     <link href="~/Content/Login/vendor/select2/select2.min.css" rel="stylesheet" />
+    <link href="~/Content/Custom/Custom.css" rel="stylesheet" />
 }
 <section class="panel">
     <header class="panel-heading">
@@ -43,79 +44,103 @@
         </form>
     </div>
     <div class="panel-body">
-        <table id="tblDeliveryOrder" class="table color-table success-table">
-            <thead>
-                <tr>
-                    <th hidden>Id Obat</th>
-                    <th>Nama Obat</th>
-                    <th>Nama Gudang</th>
-                    <th>Nama Klinik</th>
-                    <th>Nama Brang PO</th>
-                    <th>Qty PO</th>
-                    <th>Qty PO Final</th>
-                    <th>Qty DO</th>
-                    <th>Remark DO</th>
-                    <th>Qty Adj</th>
-                    <th>Remark Adj</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                @if (Model != null)
-                {
-                    foreach (var item in Model.deliveryOrderDetailpusatModels)
+        <div class="scrollTable">
+            <table id="tblDeliveryOrder" class="table color-table success-table">
+                <thead>
+                    <tr>
+                        <th hidden>Id Obat</th>
+                        <th>Nama Obat</th>
+                        <th>Nama Gudang</th>
+                        <th>Nama Klinik</th>
+                        <th>Nama Brang PO</th>
+                        <th>Qty PO</th>
+                        <th>Qty PO Final</th>
+                        <th>Qty DO</th>
+                        <th>Remark DO</th>
+                        <th>Qty Adj</th>
+                        <th>Remark Adj</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model != null)
                     {
-                        <tr>
-                            <td hidden>@item.Id</td>
-                            <td hidden>@item.ProductId</td>
-                            <td hidden>@item.GudangId</td>
-                            <td hidden>@item.ClinicId</td>
-                            <td hidden>@item.ProductId_Po</td>
-                            <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                            <td><select disabled="disabled"><option>@item.namagudang</option></select></td>
-                            <td><select disabled="disabled"><option>@item.namaklinik</option></select></td>
-                            <td><select disabled="disabled"><option>@item.namabarang_po</option></select></td>
-                            <td><input type="text" class="form-control" value="@item.qty_po" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="@item.qty_po_final" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="@item.qty_do" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="@item.remark_do" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="@item.qty_adj" disabled="disabled" /></td>
-                            <td><input type="text" class="form-control" value="@item.remark_adj" disabled="disabled" /></td>
-                            <td hidden></td>
-                            <td>
-                                <button class="edit-deliveryorderdetail">Edit</button>
-                                <button>Delete</button>
-                            </td>
-                        </tr>
+                        foreach (var item in Model.deliveryOrderDetailpusatModels)
+                        {
+                            <tr>
+                                <td hidden>@item.Id</td>
+                                <td hidden>@item.ProductId</td>
+                                <td hidden>@item.GudangId</td>
+                                <td hidden>@item.ClinicId</td>
+                                <td hidden>@item.ProductId_Po</td>
+                                <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
+                                <td><select disabled="disabled"><option>@item.namagudang</option></select></td>
+                                <td><select disabled="disabled"><option>@item.namaklinik</option></select></td>
+                                <td><select disabled="disabled"><option>@item.namabarang_po</option></select></td>
+                                <td><input type="text" class="form-control" value="@item.qty_po" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_po_final" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_do" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.remark_do" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_adj" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.remark_adj" disabled="disabled" /></td>
+                                <td hidden></td>
+                                <td>
+                                    <button class="edit-deliveryorderdetail btn btn-success btn-sm">Edit</button>
+                                    <button class="btn btn-success btn-sm">Delete</button>
+                                </td>
+                            </tr>
+                        }
                     }
-                }
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
         <br />
         <form id="deliveryorderdetail">
             <div class="form-group">
                 <input type="text" hidden id="DeliveryOrderDetailId" />
-                <select id="namabarang" class="form-control" style="width:230px"></select>
                 <input type="text" hidden id="ProductId" />
-                <select id="namagudang" class="form-control" style="width:230px"></select>
                 <input type="text" hidden id="GudangId" />
-                <select id="namaklinik" class="form-control" style="width:230px"></select>
                 <input type="text" hidden id="ClinicId" />
-                <select id="namabarang_po" class="form-control" style="width:230px"></select>
                 <input type="text" hidden id="ProductId_Po" />
+                <div class="row">
+                    <div class="col-md-3">
+                        <select id="namabarang" class="form-control"></select>
+                    </div>
+                    <div class="col-md-3">
+                        <select id="namagudang" class="form-control"></select>
+                    </div>
+                    <div class="col-md-3">
+                        <select id="namaklinik" class="form-control"></select>
+                    </div>
+                    <div class="col-md-3">
+                        <select id="namabarang_po" class="form-control"></select>
+                    </div>
+                </div>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Qty PO" id="qty_po" value="" />
-                <input type="text" class="form-control" placeholder="QTY PO Final" id="qty_po_final" value="" />
-                <input type="text" class="form-control" placeholder="Qty DO" id="qty_do" value="" />
-                <input type="text" class="form-control" placeholder="Qty Adj" id="qty_adj" value="" />
+                <div class="row">
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="Qty PO" id="qty_po" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="QTY PO Final" id="qty_po_final" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="Qty DO" id="qty_do" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="Qty Adj" id="qty_adj" value="" />
+                    </div>
+                </div>
             </div>
             <div class="form-group">
                 <textarea type="text" class="namaobat form-control" placeholder="Remark DO" id="remark_do"></textarea>
                 <br />
                 <textarea type="text" class="namaobat form-control" placeholder="Remark Adj" id="remark_adj"></textarea>
             </div>
-            <input type="button" id="btnAdd" value="Add" />
+            <footer class="col-md-12 text-right">
+                <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
+            </footer>
         </form>
         <footer class="panel-footer">
             <button type="submit" class="btn btn-primary saveorderdetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/DeliveryOrderPusat/CreateOrEditDeliveryOrderPusat">@Klinik.Resources.UIMessages.Save</button>
