Updated medicine selection

--- a/Klinik.Web/Views/Shared/_Layout.cshtml
+++ b/Klinik.Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
 	<link href="~/Content/Login/vendor/select2/select2.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/jquery-datatables-bs3/assets/css/datatables.css" />
 	<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/magnific-popup/magnific-popup.css" />
+	<link rel="stylesheet" href="~/Content/Octopus/assets/vendor/pnotify/pnotify.custom.css" />
 
 	<!-- Nuget CSS -->
 	<link href="~/Content/font-awesome.css" rel="stylesheet" />
@@ -207,7 +208,7 @@
 	<script src="~/Content/Octopus/assets/vendor/jquery-ui/js/jquery-ui-1.10.4.custom.js"></script>
 	<script src="~/Content/Octopus/assets/vendor/bootstrap-multiselect/bootstrap-multiselect.js"></script>
 	<script src="~/Content/Octopus/assets/vendor/magnific-popup/magnific-popup.js"></script>
-
+	<script src="~/Content/Octopus/assets/vendor/pnotify/pnotify.custom.js"></script>
 	<!-- Theme -->
 	<script src="~/Content/Octopus/assets/javascripts/theme.js"></script>
 	<script src="~/Content/Octopus/assets/javascripts/theme.custom.js"></script>
