--- a/Klinik.Web/Views/Pharmacy/Prescription.cshtml
+++ b/Klinik.Web/Views/Pharmacy/Prescription.cshtml
@@ -41,7 +41,10 @@
 								<td>@item.Dose</td>
 								<td>@item.Qty</td>
 								<td>@item.RemarkUse</td>
-								<td><input type="text" />&nbsp;<a class="modal-with-form" href="#modalForm">.....</a></td>
+								<td>
+									<input type="text" id="@("medicineName"+(counter-1))" />
+									<a class="modal-with-form" data-rowno="@(counter-1)" href="#modalForm">&nbsp;.....</a>
+								</td>
 								<td><input type="text" /></td>
 								<td><input type="text" /></td>
 								<td><button>Confirm</button></td>
@@ -60,6 +63,7 @@
 					</header>
 					<div class="panel-body">
 						<div style="width:100%; margin:0 auto">
+							<input type="hidden" id="rowno" name="rowno" />
 							<table id="tableProductList" class="table table-striped table-bordered dt-responsive" cellspacing="0">
 								<thead>
 									<tr>
@@ -78,7 +82,7 @@
 					<footer class="panel-footer">
 						<div class="row">
 							<div class="col-md-12 text-right">
-								<button class="btn btn-primary modal-confirm">Close</button>
+								<button class="btn btn-primary modal-dismiss">Close</button>
 							</div>
 						</div>
 					</footer>
@@ -90,71 +94,79 @@
 
 @section Scripts {
 	<script type="text/javascript">
-    $(document).ready(function () {
-
-		$('#tableProductList').dataTable({
-            "autoWidth": false,
-            "processing": true,
-            "serverSide": true,
-            "filter": true,
-            "orderMulti": false,
-            "pageLength": 10,
-            "ajax": {
-                "url": "/Pharmacy/GetProductList",
-                "type": "POST",
-                "datatype": "json"
-            },
-
-            "columnDefs":
-                [{
-                    "targets": [0],
-                    "visible": false,
-                    "searchable": false,
-                },
-                {
-                    "targets": [1],
-                    "searchable": true,
-                    "orderable": true
-                },
-                {
-                    "targets": [2],
-                    "searchable": true,
-                    "orderable": true
-                },
-                {
-                    "targets": [3],
-					"searchable": false,
-					"orderable": false
-                },
-                {
-                    "targets": [4],
-                    "searchable": false,
-					"orderable": false
+		$(document).ready(function () {
+			$('#tableProductList').dataTable({
+				"autoWidth": false,
+				"processing": true,
+				"serverSide": true,
+				"filter": true,
+				"orderMulti": false,
+				"pageLength": 10,
+				"ajax": {
+					"url": "/Pharmacy/GetProductList",
+					"type": "POST",
+					"datatype": "json"
 				},
-                {
-                    "targets": [5],
-                    "searchable": false,
-                    "orderable": false
-                },
-                {
-                    "targets": [6],
-                    "searchable": false,
-                    "orderable": false
-                }
-                ],
 
-            "columns": [
-				{ "data": "Id", "name": "Id", "autoWidth": false },
-				{ "data": "Code", "name": "Code", "autoWidth": true },
-				{ "data": "Name", "name": "Name", "autoWidth": true },
-				{ "data": "RetailPrice", "name": "RetailPrice", "autoWidth": true },
-				{ "data": "ProductCategoryName", "name": "ProductCategoryName", "autoWidth": true },
-				{ "data": "ProductUnitName", "name": "ProductUnitName", "autoWidth": true },
-                {
-                    "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/Pharmacy/SelectProduct?productid=' + full.Id + '">SELECT</a>'; }
-                }
-            ]
-        });
-    });
+				"columnDefs":
+					[{
+						"targets": [0],
+						"visible": false,
+						"searchable": false,
+					},
+					{
+						"targets": [1],
+						"searchable": true,
+						"orderable": true
+					},
+					{
+						"targets": [2],
+						"searchable": true,
+						"orderable": true
+					},
+					{
+						"targets": [3],
+						"searchable": false,
+						"orderable": false
+					},
+					{
+						"targets": [4],
+						"searchable": false,
+						"orderable": false
+					},
+					{
+						"targets": [5],
+						"searchable": false,
+						"orderable": false
+					},
+					{
+						"targets": [6],
+						"searchable": false,
+						"orderable": false
+					}
+					],
+
+				"columns": [
+					{ "data": "Id", "name": "Id", "autoWidth": false },
+					{ "data": "Code", "name": "Code", "autoWidth": true },
+					{ "data": "Name", "name": "Name", "autoWidth": true },
+					{ "data": "RetailPrice", "name": "RetailPrice", "autoWidth": true },
+					{ "data": "ProductCategoryName", "name": "ProductCategoryName", "autoWidth": true },
+					{ "data": "ProductUnitName", "name": "ProductUnitName", "autoWidth": true },
+					{
+						"render": function (data, type, full, meta) { return "<button class='btn btn-info modal-dismiss' onclick='OnSelectProduct(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.SelectFile</button>"; }											
+					}
+				]
+			});
+
+			$('.modal-with-form').click(function () {
+				$('#rowno').val($(this).data('rowno'));
+			});
+		});
+
+		var OnSelectProduct = function (Name) {
+			var rowNum = $('#rowno').val();
+			$('#medicineName' + rowNum).val(Name);
+		}
 	</script>
 }
