--- a/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
@@ -101,7 +101,7 @@
             "columns": [
                 { "data": "Id", "Id": "Id", "autoWidth": false },
                 { "data": "ponumber", "ponumber": "ponumber", "autoWidth": true },
-                { "data": "podate", "podate": "podate", "autoWidth": true },
+                { "data": "createformat", "createformat": "createformat", "autoWidth": true },
                 { "data": "request_by", "request_by": "request_by", "autoWidth": false },
                 { "data": "approve_by", "approve_by": "approve_by", "autoWidth": true },
                 { "data": "approve", "approve": "approve", "autoWidth": true },
