--- a/Klinik.Web/Views/DeliveryOrderPusat/DeliveryOrderPusatList.cshtml
+++ b/Klinik.Web/Views/DeliveryOrderPusat/DeliveryOrderPusatList.cshtml
@@ -90,7 +90,7 @@
             "columns": [
                 { "data": "Id", "Id": "Id", "autoWidth": false },
                 { "data": "donumber", "donumber": "donumber", "autoWidth": true },
-                { "data": "CreatedDate", "CreatedDate": "CreatedDate", "autoWidth": true },
+                { "data": "createformat", "createformat": "createformat", "autoWidth": true },
                 { "data": "dodest", "dodest": "dodest", "autoWidth": false },
                 { "data": "CreatedBy", "CreatedBy": "CreatedBy", "autoWidth": true },
                 { "data": "CreatedBy", "CreatedBy": "CreatedBy", "autoWidth": true },
