--- a/Klinik.Web/Views/DeliveryOrder/CreateOrEditDeliveryOrder.cshtml
+++ b/Klinik.Web/Views/DeliveryOrder/CreateOrEditDeliveryOrder.cshtml
@@ -23,6 +23,12 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">PO ID</label>
+                <div class="col-md-4">
+                    <select class="form-control" id="ponumber" name="poid"></select>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.dodate, new { @class = "form-control", @id = "dodate" })
@@ -45,108 +51,108 @@
     </div>
     <div class="panel-body">
         <div class="scrollTable">
-                <table id="tblDeliveryOrder" class="table color-table success-table">
-                    <thead>
-                        <tr>
-                            <th hidden>Id Obat</th>
-                            <th>Nama Obat</th>
-                            <th>Nama Gudang</th>
-                            <th>Nama Klinik</th>
-                            <th>Nama Brang PO</th>
-                            <th>Qty PO</th>
-                            <th>Qty PO Final</th>
-                            <th>Qty DO</th>
-                            <th>Remark DO</th>
-                            <th>Qty Adj</th>
-                            <th>Remark Adj</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @if (Model != null)
+            <table id="tblDeliveryOrder" class="table color-table success-table">
+                <thead>
+                    <tr>
+                        <th hidden>Id Obat</th>
+                        <th>Nama Obat</th>
+                        <th>Nama Gudang</th>
+                        <th>Nama Klinik</th>
+                        <th>Nama Brang PO</th>
+                        <th>Qty PO</th>
+                        <th>Qty PO Final</th>
+                        <th>Qty DO</th>
+                        <th>Remark DO</th>
+                        <th>Qty Adj</th>
+                        <th>Remark Adj</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model != null)
+                    {
+                        foreach (var item in Model.deliveryOrderDetailModels)
                         {
-                            foreach (var item in Model.deliveryOrderDetailModels)
-                            {
-                                <tr>
-                                    <td hidden>@item.Id</td>
-                                    <td hidden>@item.ProductId</td>
-                                    <td hidden>@item.GudangId</td>
-                                    <td hidden>@item.ClinicId</td>
-                                    <td hidden>@item.ProductId_Po</td>
-                                    <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                                    <td><select disabled="disabled"><option>@item.namagudang</option></select></td>
-                                    <td><select disabled="disabled"><option>@item.namaklinik</option></select></td>
-                                    <td><select disabled="disabled"><option>@item.namabarang_po</option></select></td>
-                                    <td><input type="text" class="form-control" value="@item.qty_po" disabled="disabled" /></td>
-                                    <td><input type="text" class="form-control" value="@item.qty_po_final" disabled="disabled" /></td>
-                                    <td><input type="text" class="form-control" value="@item.qty_do" disabled="disabled" /></td>
-                                    <td><input type="text" class="form-control" value="@item.remark_do" disabled="disabled" /></td>
-                                    <td><input type="text" class="form-control" value="@item.qty_adj" disabled="disabled" /></td>
-                                    <td><input type="text" class="form-control" value="@item.remark_adj" disabled="disabled" /></td>
-                                    <td hidden></td>
-                                    <td>
-                                        <button class="edit-deliveryorderdetail btn btn-success btn-sm">Edit</button>
-                                        <button class="btn btn-danger btn-sm">Delete</button>
-                                    </td>
-                                </tr>
-                            }
+                            <tr>
+                                <td hidden>@item.Id</td>
+                                <td hidden>@item.ProductId</td>
+                                <td hidden>@item.GudangId</td>
+                                <td hidden>@item.ClinicId</td>
+                                <td hidden>@item.ProductId_Po</td>
+                                <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
+                                <td><select disabled="disabled"><option>@item.namagudang</option></select></td>
+                                <td><select disabled="disabled"><option>@item.namaklinik</option></select></td>
+                                <td><select disabled="disabled"><option>@item.namabarang_po</option></select></td>
+                                <td><input type="text" class="form-control" value="@item.qty_po" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_po_final" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_do" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.remark_do" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.qty_adj" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.remark_adj" disabled="disabled" /></td>
+                                <td hidden></td>
+                                <td>
+                                    <button class="edit-deliveryorderdetail btn btn-success btn-sm">Edit</button>
+                                    <button class="btn btn-danger btn-sm">Delete</button>
+                                </td>
+                            </tr>
                         }
-                    </tbody>
-                </table>
-            </div>
-            <br />
-            <form id="deliveryorderdetail">
-                <div class="form-group">
-                    <input type="text" hidden id="DeliveryOrderDetailId" />
-                    <input type="text" hidden id="ProductId" />
-                    <input type="text" hidden id="GudangId" />
-                    <input type="text" hidden id="ClinicId" />
-                    <input type="text" hidden id="ProductId_Po" />
-                    <div class="row">
-                        <div class="col-md-3">
-                            <select id="namabarang" class="form-control"></select>
-                        </div>
-                        <div class="col-md-3">
-                            <select id="namagudang" class="form-control"></select>
-                        </div>
-                        <div class="col-md-3">
-                            <select id="namaklinik" class="form-control"></select>
-                        </div>
-                        <div class="col-md-3">
-                            <select id="namabarang_po" class="form-control"></select>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-md-3">
-                            <input type="text" class="form-control" placeholder="Qty PO" id="qty_po" value="" />
-                        </div>
-                        <div class="col-md-3">
-                            <input type="text" class="form-control" placeholder="QTY PO Final" id="qty_po_final" value="" />
-                        </div>
-                        <div class="col-md-3">
-                            <input type="text" class="form-control" placeholder="Qty DO" id="qty_do" value="" />
-                        </div>
-                        <div class="col-md-3">
-                            <input type="text" class="form-control" placeholder="Qty Adj" id="qty_adj" value="" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <textarea type="text" class="namaobat form-control" placeholder="Remark DO" id="remark_do"></textarea>
-                    <br />
-                    <textarea type="text" class="namaobat form-control" placeholder="Remark Adj" id="remark_adj"></textarea>
-                </div>
-                <footer class="col-md-12 text-right">
-                    <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
-                </footer>
-            </form>
-            <footer class="panel-footer">
-                <button type="submit" class="btn btn-primary saveorderdetail" data-parameterone="_deliveryorder" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/DeliveryOrder/CreateOrEditDeliveryOrder">@Klinik.Resources.UIMessages.Save</button>
-                <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
-            </footer>
+                    }
+                </tbody>
+            </table>
         </div>
+        <br />
+        <form id="deliveryorderdetail">
+            <div class="form-group">
+                <input type="text" hidden id="DeliveryOrderDetailId" />
+                <input type="text" hidden id="ProductId" />
+                <input type="text" hidden id="GudangId" />
+                <input type="text" hidden id="ClinicId" />
+                <input type="text" hidden id="ProductId_Po" />
+                <div class="row">
+                    <div class="col-md-3">
+                        <select id="namabarang" class="form-control"></select>
+                    </div>
+                    <div class="col-md-3">
+                        <select id="namagudang" class="form-control"></select>
+                    </div>
+                    <div class="col-md-3">
+                        <select id="namaklinik" class="form-control"></select>
+                    </div>
+                    <div class="col-md-3">
+                        <select id="namabarang_po" class="form-control"></select>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="Qty PO" id="qty_po" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="QTY PO Final" id="qty_po_final" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="Qty DO" id="qty_do" value="" />
+                    </div>
+                    <div class="col-md-3">
+                        <input type="text" class="form-control" placeholder="Qty Adj" id="qty_adj" value="" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <textarea type="text" class="namaobat form-control" placeholder="Remark DO" id="remark_do"></textarea>
+                <br />
+                <textarea type="text" class="namaobat form-control" placeholder="Remark Adj" id="remark_adj"></textarea>
+            </div>
+            <footer class="col-md-12 text-right">
+                <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
+            </footer>
+        </form>
+        <footer class="panel-footer">
+            <button type="submit" class="btn btn-primary saveorderdetail" data-parameterone="_deliveryorder" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/DeliveryOrder/CreateOrEditDeliveryOrder">@Klinik.Resources.UIMessages.Save</button>
+            <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+        </footer>
+    </div>
 </section>
 
 @section Scripts {
