--- a/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
@@ -24,6 +24,12 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">PO ID</label>
+                <div class="col-md-4">
+                    <select class="form-control" id="PurchaseRequestId" name="PurchaseRequestId"></select>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.podate, new { @class = "form-control", @id = "podate" })
@@ -134,7 +140,7 @@
                     <footer class="col-md-12 text-right">
                         <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
                     </footer>
-</form>
+            </form>
             <footer class="panel-footer">
                 <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseOrder/CreateOrEditPurchaseOrder">@Klinik.Resources.UIMessages.Save</button>
                 <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
