--- a/Klinik.Web/Views/PurchaseOrderPusat/CreateOrEditPurchaseOrderPusat.cshtml
+++ b/Klinik.Web/Views/PurchaseOrderPusat/CreateOrEditPurchaseOrderPusat.cshtml
@@ -24,6 +24,12 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">PO ID</label>
+                <div class="col-md-4">
+                    <select class="form-control" id="PurchaseRequestId" name="PurchaseRequestId"></select>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.CreatedDate</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.podate, new { @class = "form-control", @id = "podate" })
