--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -146,7 +146,9 @@
     <script src="~/js/PurchaseRequest.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-
+            $('#prdate').datepicker({
+                autoclose: true
+            });
             $('#btnreset').click(function (e) {
                 window.location.href = "/PurchaseRequest/PurchaseRequestList";
             });
