--- a/Klinik.Web/Views/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat.cshtml
+++ b/Klinik.Web/Views/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat.cshtml
@@ -172,7 +172,9 @@
     <script src="~/js/PurchaseReqestPusat.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-
+            $('#prdate').datepicker({
+                autoclose: true
+            });
             $('#btnreset').click(function (e) {
                 window.location.href = "/PurchaseRequestPusat/PurchaseRequestPusatList";
             });
